--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
         "@angular/platform-browser": "~8.1.2",
         "@angular/platform-browser-dynamic": "~8.1.2",
         "@angular/router": "~8.1.2",
-        "@ionic-native/background-mode": "^5.16.0",
-        "@ionic-native/barcode-scanner": "^5.16.0",
-        "@ionic-native/core": "^5.0.0",
-        "@ionic-native/date-picker": "^5.16.0",
-        "@ionic-native/diagnostic": "^5.16.0",
-        "@ionic-native/geolocation": "^5.16.0",
-        "@ionic-native/http": "^5.16.0",
-        "@ionic-native/network": "^5.16.0",
-        "@ionic-native/splash-screen": "^5.0.0",
-        "@ionic-native/sqlite": "^5.16.0",
-        "@ionic-native/status-bar": "^5.0.0",
-        "@ionic/angular": "^4.7.1",
+        "@ionic-native/background-mode": "^5.19.1",
+        "@ionic-native/barcode-scanner": "^5.19.1",
+        "@ionic-native/core": "^5.19.1",
+        "@ionic-native/date-picker": "^5.19.1",
+        "@ionic-native/diagnostic": "^5.19.1",
+        "@ionic-native/geolocation": "^5.19.1",
+        "@ionic-native/http": "^5.19.1",
+        "@ionic-native/network": "^5.19.1",
+        "@ionic-native/splash-screen": "^5.19.1",
+        "@ionic-native/sqlite": "^5.19.1",
+        "@ionic-native/status-bar": "^5.19.1",
+        "@ionic/angular": "^4.11.7",
         "@ionic/storage": "^2.2.0",
-        "@ngrx/effects": "^8.5.1",
-        "@ngrx/entity": "^8.5.1",
-        "@ngrx/store": "^8.5.1",
+        "@ngrx/effects": "^8.6.0",
+        "@ngrx/entity": "^8.6.0",
+        "@ngrx/store": "^8.6.0",
         "@ngx-translate/core": "^11.0.1",
         "@ngx-translate/http-loader": "^4.0.0",
         "async": "^3.1.0",
         "commitizen": "^4.0.3",
         "cordova-android": "7.1.4",
-        "cordova-plugin-advanced-http": "^2.3.0",
+        "cordova-plugin-advanced-http": "^2.3.1",
         "cordova-plugin-background-mode": "^0.7.3",
         "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-device": "^2.0.3",
@@ -57,23 +57,23 @@
         "cordova-plugin-whitelist": "^1.3.4",
         "cordova-sqlite-storage": "^3.4.1",
         "cordova.plugins.diagnostic": "^5.0.1",
-        "core-js": "^2.5.4",
+        "core-js": "^2.6.11",
         "cz-conventional-changelog": "^3.0.2",
         "js-sha1": "^0.6.0",
-        "leaflet": "^1.5.1",
+        "leaflet": "^1.6.0",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
         "phonegap-plugin-barcodescanner": "^8.1.0",
-        "rxjs": "~6.5.1",
-        "sql.js": "^1.0.1",
-        "sqlite3": "^4.0.9",
+        "rxjs": "^6.5.4",
+        "sql.js": "^1.1.0",
+        "sqlite3": "^4.1.1",
         "stream": "0.0.2",
         "tslib": "^1.9.0",
-        "typeorm": "^0.2.18",
+        "typeorm": "^0.2.22",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-builders/custom-webpack": "^8.2.0",
+        "@angular-builders/custom-webpack": "^8.4.1",
         "@angular-devkit/architect": "~0.801.2",
         "@angular-devkit/build-angular": "~0.801.2",
         "@angular-devkit/core": "~8.1.2",
@@ -86,15 +86,15 @@
         "@ionic/angular-toolkit": "~2.0.0",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^8.9.5",
-        "codelyzer": "^5.0.0",
+        "@types/node": "^8.10.59",
+        "codelyzer": "^5.2.1",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~4.1.0",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.0",
+        "karma-jasmine-html-reporter": "^1.5.1",
         "protractor": "~5.4.0",
         "ts-node": "^7.0.1",
         "tslint": "~5.15.0",
