--- a/package.json
+++ b/package.json
@@ -51,23 +51,23 @@
     "cordova-android": "7.1.4",
     "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-ios": "4.5.4",
-    "cordova-plugin-advanced-http": "1.11.1",
-    "cordova-plugin-app-version": "0.1.9",
-    "cordova-plugin-background-mode": "0.7.3",
-    "cordova-plugin-console": "1.1.0",
-    "cordova-plugin-datepicker": "0.9.3",
-    "cordova-plugin-device": "2.0.3",
-    "cordova-plugin-file": "6.0.2",
-    "cordova-plugin-file-transfer": "1.7.1",
-    "cordova-plugin-geolocation": "4.0.2",
+    "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-background-mode": "^0.7.3",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-datepicker": "^0.9.3",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^2.5.3",
-    "cordova-plugin-network-information": "2.0.2",
-    "cordova-plugin-splashscreen": "5.0.3",
-    "cordova-plugin-statusbar": "2.4.3",
-    "cordova-plugin-whitelist": "1.3.4",
-    "cordova-sqlite-storage": "3.4.1",
-    "cordova.plugins.diagnostic": "4.0.12",
+    "cordova-plugin-network-information": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "^3.4.1",
+    "cordova.plugins.diagnostic": "^4.0.12",
     "cz-conventional-changelog": "^2.1.0",
     "d2-utilizr": "^0.2.15",
     "d3-color": "^1.0.3",
@@ -90,7 +90,7 @@
     "ng2-dnd": "^5.0.2",
     "ng2-dragula": "^1.5.0",
     "ngx-pagination": "^3.0.3",
-    "phonegap-plugin-barcodescanner": "8.1.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "polylabel": "^1.0.2",
     "rxjs": "5.5.11",
     "shp-write": "^0.3.2",
@@ -124,7 +124,9 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova.plugins.diagnostic": {},
+      "cordova.plugins.diagnostic": {
+        "ANDROID_SUPPORT_VERSION": "28.+"
+      },
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
